kubernetes/apps/default/paperless/app/ciliumnetworkpolicy.yaml
---
# yaml-language-server: $schema=https://schemas.bykaj.io/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: paperless
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: paperless
      app.kubernetes.io/instance: paperless
      app.kubernetes.io/controller: paperless
  egress:
    - toEndpoints:
        - matchLabels:
            k8s:app: dragonfly
      toPorts:
        - ports:
            - port: "6379"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: database
            cnpg.io/cluster: postgres
      toPorts:
        - ports:
            - port: "5432"
              protocol: TCP
  ingress:
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: network
            gateway.networking.k8s.io/gateway-name: envoy-external
      toPorts:
        - ports:
            - port: "8000"
              protocol: TCP
